test/compile_errors/err_tool_capability_struct_literal.w
//! expect-error: tool capability 'ToolFs' can only be constructed by the compiler driver

use std.build

fn main:
    let _fake = ToolFs { token: "" }
